--- a/src/assets/css/variable.scss
+++ b/src/assets/css/variable.scss
@@ -1,13 +1,13 @@
-$background: #1c1c1c;
+$background: #1e1e1e;
 $foreground: #dedbeb;
 
 $black: #28222d;
 $red: #fb5c8e;
-$green: #a2baa8;
+$green: #23D18B;
 $yellow: #eacac0;
-$blue: #b4a4de;
+$blue: #9CDCFE;
 $magenta: #edabd2;
-$cyan: #aabae7;
+$cyan: #4EC9B0;
 $white: #dedbeb;
 
 $menu-width-desktop: 240px;
