--- a/src/assets/css/theme.scss
+++ b/src/assets/css/theme.scss
@@ -1,5 +1,33 @@
 @import './variable.scss';
+@import url('https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&family=Open+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap');
 
-main{
-    background-color: $white;
+* {
+    font-family: 'Ubuntu', sans-serif;
+}
+
+main {
+    padding: 10px 50px;
+    background-color: $background;
+    color: $foreground;
+    overflow: scroll;
+
+    a {
+        color: $foreground;
+        text-decoration: none;
+    }
+
+    h1 {
+        padding-bottom: 20px;
+    }
+
+    .markdown-list {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        column-gap: 50px;
+        row-gap: 50px;
+    }
+}
+
+h1, h2 {
+    color: $green;
 }
