--- a/src/components/sidebar/index.scss
+++ b/src/components/sidebar/index.scss
@@ -6,6 +6,7 @@
 	height:100vh;
 	width:$menu-width-desktop;
 	outline:none;
+    border-right: 1px solid $black;
 	
 	.avatar{
 		background:rgba(0,0,0,0.1);
@@ -23,6 +24,8 @@
 		h2{
 			font-weight:normal;
 			margin-bottom:0;
+            padding-top: 20px;
+            color: $green;
 		}
 	}
 
@@ -68,7 +71,7 @@
         flex-direction: column;
 
 		a{
-			padding:0.5em 1em 0.5em 4em;
+			padding:0.75em 1em 0.75em 4em;
 			font-size:0.95em;
 			font-weight:regular;
 			background-repeat:no-repeat;
@@ -109,6 +112,7 @@
 
             &.active{
                 border-left: 5px solid $red;
+                background-color:rgba(0,0,0,0.1);
             }
 		}
 	}
