LINKED TO TAGS PAGE
- link to all tags linked with blogs page

--- a/src/assets/css/layout.scss
+++ b/src/assets/css/layout.scss
@@ -12,3 +12,12 @@
         flex: 1;
     }
 }
+
+.flex-right {
+    display: flex;
+    justify-content: right;
+}
+
+.padding-bottom-md {
+    padding-bottom: 7px;
+}
