--- a/src/pages/blog/index.scss
+++ b/src/pages/blog/index.scss
@@ -44,7 +44,7 @@
     .blog-header {
         display: flex;
         justify-content: space-between;
-        color: $red;
+        color: $cyan;
     }
 
     .tags {
