--- a/src/assets/css/theme.scss
+++ b/src/assets/css/theme.scss
@@ -31,3 +31,13 @@ main {
 h1, h2 {
     color: $green;
 }
+
+.link-red{
+    a {
+        color: $red;
+
+        &:hover {
+            text-shadow: 0px 0px 1px $red;
+        }
+    }
+}
